--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "assert": "^1.4.1",
     "express": "^4.16.3",
+    "global": "^4.3.2",
+    "mocha": "^5.1.1",
+    "mongodb": "^3.0.8",
+    "mongoose": "^5.0.18",
     "socket.io": "^2.1.0",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "superagent": "^3.8.3",
+    "wagner-core": "^0.2.0"
+  },
+  "scripts": {
+    "test": "mocha ./express/test.js"
   }
 }
