--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "assert": "^1.4.1",
     "express": "^4.16.3",
     "global": "^4.3.2",
+    "http-status": "^1.1.0",
     "mocha": "^5.1.1",
     "mongodb": "^3.0.8",
     "mongoose": "^5.0.18",
